--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,3 @@
-DB_URI=mongodb://localhost:27017/
+DB_URI=mongodb://127.0.0.1:27017/wonderhive/
 PORT=3001
-SECRET=77543NKL3IN09I8NR2QWGEIBQUOG3I1908HBG21
 ```
